test/Harper/Tests/Good/issue007_while.har
fac :: Integer -> Integer;
fac n = {
  var (result :: Integer) = 1;
  var (i :: Integer) = 0;
  while i < n {
    i += 1;
    result *= i;
  }
  return result;
};

main :: Integer;
main = fac 42;