test/Harper/Tests/Bad/issue029_conflYieldTypes.har
generate :: Integer -> Iterator Integer;
generate n = {
  var (i :: Integer) = 0;
  while i < n {
    yield i;
    i += 1;
  }
  yield (i, n);
};

main :: ();
main = ();